Sample Working Complete Structure

--- a/com.automation.aws.root/.project
+++ b/com.automation.aws.root/.project
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.automation.aws.core</name>
+	<name>com.automation.aws.root</name>
 	<comment></comment>
 	<projects>
+		<project>AWS-Selenium</project>
+		<project>com.automation.aws.core</project>
+		<project>com.automation.aws.testing</project>
 	</projects>
 	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.m2e.core.maven2Builder</name>
 			<arguments>
@@ -17,7 +15,6 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
 </projectDescription>
