--- a/com.automation.aws.core/pom.xml
+++ b/com.automation.aws.core/pom.xml
@@ -4,9 +4,7 @@
 
   <groupId>com.automation.aws.core</groupId>
   <artifactId>com.automation.aws.core</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-<!--The identifier of the parent POM -->
+  <packaging>jar</packaging>
 
   <name>com.automation.aws.core</name>
   <url>http://maven.apache.org</url>
@@ -14,51 +12,11 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-<modules>
-    <module>com.automation.aws.core</module>
-</modules>
-  <dependencies>
 
-  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-<dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-java</artifactId>
-    <version>3.141.59</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.testng/testng -->
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>6.9.10</version>
-    <scope>test</scope>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
-<dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-chrome-driver</artifactId>
-    <version>3.141.59</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
-<dependency>
-    <groupId>com.aventstack</groupId>
-    <artifactId>extentreports</artifactId>
-    <version>4.1.3</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
-<dependency>
-    <groupId>io.github.bonigarcia</groupId>
-    <artifactId>webdrivermanager</artifactId>
-    <version>3.8.1</version>
-</dependency>
-
-
-<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
-<dependency>
-    <groupId>org.hamcrest</groupId>
-    <artifactId>hamcrest-core</artifactId>
-    <version>2.2</version>
-    <scope>test</scope>
-</dependency>
-
-    </dependencies>
+<parent>
+    <groupId>com.automation.aws.root</groupId>
+    <artifactId>com.automation.aws.root</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../com.automation.aws.root</relativePath>
+    </parent>
 </project>
