--- a/com.automation.aws.testing/pom.xml
+++ b/com.automation.aws.testing/pom.xml
@@ -4,7 +4,6 @@
 
   <groupId>com.automation.aws.testing</groupId>
   <artifactId>com.automation.aws.testing</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>com.automation.aws.testing</name>
@@ -15,8 +14,9 @@
   </properties>
 
 <parent>
-    <groupId>com.automation.aws.core</groupId>
-    <artifactId>com.automation.aws.core</artifactId>
+    <groupId>com.automation.aws.root</groupId>
+    <artifactId>com.automation.aws.root</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../com.automation.aws.root</relativePath>
     </parent>
 </project>
