Working on Extent Report

--- a/com.automation.aws.testing/pom.xml
+++ b/com.automation.aws.testing/pom.xml
@@ -6,12 +6,8 @@
   <artifactId>com.automation.aws.testing</artifactId>
   <packaging>jar</packaging>
 
-  <name>com.automation.aws.testing</name>
-  <url>http://maven.apache.org</url>
+  
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
 <parent>
     <groupId>com.automation.aws.root</groupId>
@@ -19,4 +15,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <relativePath>../com.automation.aws.root</relativePath>
     </parent>
+    <dependencies>
+    <dependency>
+     <groupId>com.automation.aws.core</groupId>
+  <artifactId>com.automation.aws.core</artifactId>
+     <version>0.0.1-SNAPSHOT</version>
+     </dependency
+    ></dependencies>
 </project>
