--- a/com.automation.aws.root/pom.xml
+++ b/com.automation.aws.root/pom.xml
@@ -27,7 +27,7 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.9.10</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
@@ -41,7 +41,7 @@
 <dependency>
     <groupId>org.apache.poi</groupId>
     <artifactId>poi-ooxml</artifactId>
-    <version>3.9</version>
+    <version>4.1.2</version>
 </dependency>
 
 
@@ -50,7 +50,7 @@
     <groupId>org.hamcrest</groupId>
     <artifactId>hamcrest-core</artifactId>
     <version>2.2</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 </dependency>
 <!-- https://mvnrepository.com/artifact/log4j/log4j -->
 <dependency>
