--- a/com.automation.aws.root/pom.xml
+++ b/com.automation.aws.root/pom.xml
@@ -20,7 +20,8 @@
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>3.141.59</version>
+<!-- <version>3.141.59</version> --> 
+   <version>4.0.0-alpha-5</version> 
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
