--- a/com.automation.freeCRMBDD/pom.xml
+++ b/com.automation.freeCRMBDD/pom.xml
@@ -16,7 +16,12 @@
     <artifactId>cucumber-junit</artifactId>
     <version>1.2.5</version>
 </dependency>
-
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>4.0.0</version>
+    <scope>compile</scope>
+</dependency>
 
 	<dependency>
     <groupId>info.cukes</groupId>
